# eff-physics-learn-dataset

./: .gitignore  COMPLETE_SUMMARY.md  QUICKSTART_API.md  README.md  README_UPDATES.md  VISUALIZATION_INDEX.md  pyproject.toml  regenerate_all_splits.sh  solution_percentile_comparison.md
configs/datasets/: dataset_links.toml
docs/: PLOTTING_STYLE_GUIDE.md  dataset_api.md  dataset_section_new.tex  download_datasets.md  modalities.md
docs/_assets/results/allen_cahn/: allen_cahn_parametric_solution_similarity.json
docs/_assets/results/burgers/: burgers_parametric_solution_similarity.json
docs/_assets/results/convection/: convection_parametric_solution_similarity.json
docs/reference/: pinn_losses.py
scripts/: create_metadata_files.py  download_datasets.py  download_datasets.sh  generate_dataset_summary.py  generate_parametric_split_indices.py  pinn_losses.py  plot_dataset_samples.py  plot_param_splits.py  regenerate_test_indices.py  solution_similarity_report.py  switch_datasets.py  validate_generated_datasets.py  verify_dataset_pinn_consistency.py
scripts/dataset_generation/: README.md  generate_datasets.py
scripts/dataset_generation/solvers/: generate_allen_cahn.py  generate_burgers.py  generate_convection_analytical.py  generate_helmholtz2d_analytical.py  utils.py
src/eff_physics_learn_dataset/: __init__.py  download.py
src/eff_physics_learn_dataset/datasets/: __init__.py  parametric_split.py  pde_dataset.py  pkl_schema.py  plotting.py  solution_similarity.py  verification.py
(+3 files in other folders)
