[project]
name = "eff-physics-learn-dataset"
version = "0.1.0"
description = "Efficient Physics Learning Datasets - JAX-based dataset utilities for PDE learning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "E. Torres"}
]
keywords = ["jax", "physics", "datasets", "pde", "machine-learning"]

dependencies = [
    # Core JAX ecosystem
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    
    # Hugging Face datasets
    "datasets>=2.14.0",
    "huggingface-hub>=0.19.0",
    
    # Data handling
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "h5py>=3.10.0",
    
    # Configuration and utilities
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    
    # Google Drive download utility
    "gdown>=4.7.0",
    
    # Progress bars
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eff_physics_learn_dataset"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

